--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="Lineas.js"></script>
+    <script src="ManchaG.js"></script>
+    <script src="ManchaN.js"></script>
   </body>
 </html>
